// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: DgScript fails if no component is given 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span />
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript fails if no func is given 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  />
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders with multiple params 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className={null}
    key="0"
  >
    param1
    <span
      className="token punctuation"
    >
      , 
    </span>
  </span>
  <span
    className={null}
    key="1"
  >
    param2
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders with multiple subcomponents 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    key="0"
  >
    subTest
    <span
      className="token punctuation"
    >
      .
    </span>
  </span>
  <span
    key="1"
  >
    subTest2
    <span
      className="token punctuation"
    >
      .
    </span>
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders with params 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className={null}
    key="0"
  >
    param1
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders with subcomponents 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    key="0"
  >
    subTest
    <span
      className="token punctuation"
    >
      .
    </span>
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;

exports[`Utilities: DgScript renders with the string token if escaped strings exist in the argument 1`] = `
<code>
  <span>
    dg
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span>
    test
  </span>
  <span
    className="token punctuation"
  >
    .
  </span>
  <span
    className="token function"
  >
    init
  </span>
  <span
    className="token punctuation"
  >
    (
  </span>
  <span
    className="token string"
    key="0"
  >
    "param1"
  </span>
  <span
    className="token punctuation"
  >
    );
  </span>
</code>
`;
